--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [
     "api"
@@ -12,6 +12,8 @@
   "author": "Donovan Chenchiah",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "json": "^11.0.0",
+    "mongoose": "^5.13.5"
   }
 }
